<resources>
    <string name="app_name">Parking control</string>
    <!-- Strings related to login -->
    <string name="prompt_username">Nombre de usuario</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">INICIAR SESIÓN</string>
    <string name="action_sign_in_short">Sign in</string>
    <!--string name="welcome">"Welcome !"</string>-->
    <string name="welcome">Bienvenido/a a Parking System</string>
    <string name="sign_in">Inicia sesión para empezar</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>